Fixed icon alignment in wizard step titles

--- a/src/scss/wizard.scss
+++ b/src/scss/wizard.scss
@@ -19,3 +19,8 @@
     font-size: 160%;
   }
 }
+
+.step-logo > .icon {
+  position: relative;
+  top: -3px;
+}
